r_container scrollbar and some fixes

--- a/style.css
+++ b/style.css
@@ -241,6 +241,18 @@ input[type="text"]{
 .scroll:hover::-webkit-scrollbar-thumb {
   background-color: rgba(207, 207, 207, 0.2);
 }
+.r_contain::-webkit-scrollbar {
+  background-color: transparent;
+}
+
+.r_contain::-webkit-scrollbar-thumb {
+  background-color: transparent;
+  border: none;
+}
+
+.r_contain:hover::-webkit-scrollbar-thumb {
+  background-color: rgba(207, 207, 207, 0.2);
+}
 
 .create{
     color: white;
@@ -282,8 +294,8 @@ input[type="text"]{
 
 .l_info{
     flex-direction: column;
-    padding-top: 40px;
-    margin: 0px 20px 30px 20px;
+    padding-top: 22px;
+    margin: 0px 20px 5px 20px;
     color: #B3B3B3;
 
 }
@@ -438,7 +450,7 @@ input[type="text"]{
     color: white;
 }
 .left_right_info{
-    gap: 75px;
+    gap: 55px;
 }
 .right_right_info{
     gap: 15px;
