--- a/utility.css
+++ b/utility.css
@@ -125,8 +125,8 @@
     width: 18px;
 }
 .info-svg-box{
-    width: 50px;
-    height: 50px;
+    width: 45px;
+    height: 45px;
     background-color: #222222;
     border-radius: 30px;
     transition: transform 0.4s ease, color 0.4s ease;
